rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x521_2016_SelectedObjectClasses.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x521_2016_SelectedObjectClasses.asn1
---
Error matching ASN syntax at while parsing:
     ╭─[line 135, column 2]
     │
     │ 
 135 │  organizationalRole OBJECT-CLASS ::= { ◀▪▪▪▪▪▪▪▪▪▪ FAILED AT THIS LINE
 136 │    SUBCLASS OF   {top}
 137 │    MUST CONTAIN  {commonName}
 138 │    MAY CONTAIN   {description |
 139 │                   LocaleAttributeSet |
 140 │                   organizationalUnitName |
 141 │                   PostalAttributeSet |
 142 │                   preferredDeliveryMethod |
 143 │                   roleOccupant |
 144 │                   seeAlso |
 145 │    LDAP-NAME      {"organizationalRole"}
 146 │                   TelecommunicationAttributeSet}
 147 │    ID            id-oc-organizationalRole }
     │
─────╯
